# netwire

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Setup.lhs  default.nix  netwire.cabal
Control/: Wire.hs
Control/Wire/: Core.hs  Event.hs  Interval.hs  Run.hs  Session.hs  Switch.hs  Time.hs
Control/Wire/Unsafe/: Event.hs
FRP/: Netwire.hs
FRP/Netwire/: Analyze.hs  Move.hs  Noise.hs
FRP/Netwire/Utils/: Timeline.hs
test/: Test.hs
